# pythonProject1new

./: .coverage  .flake8  .gitignore  .gitignore.py  main.py  pyproject.toml  readme.md
htmlcov/: index.html
scr/: masks.py  widget.py
src/: decorators.py  generators.py  iter.py  processing.py  widget.py
tests/: conftest.py  test_decorators.py  test_generators.py  test_masks.py  test_processing.py  test_widget.py
